--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "uenc"
 version = "0.1.1"
 authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
+description = "Command line url encoder/decoder"
+readme = "README.md"
+license-file = "LICENSE"
+homepage = "https://github.com/kumabook/uenc"
+repository = "https://github.com/kumabook/uenc.git"
 
 [[bin]]
 path = "src/uenc.rs"
